--- a/UnitTestsVerbeteringTest1RegEx/UnitTestsVerbeteringTest1RegEx.csproj
+++ b/UnitTestsVerbeteringTest1RegEx/UnitTestsVerbeteringTest1RegEx.csproj
@@ -45,13 +45,19 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="Vraag1Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Vraag2Tests.cs" />
+    <Compile Include="Vraag3Tests.cs" />
+    <Compile Include="Vraag4Tests.cs" />
+    <Compile Include="Vraag5Tests.cs" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
